--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- detail hidden form for netlify -->
-    <form name="Detail Appointment" netlify netlify-honeypot="bot-field" hidden>
+    <form name="Detail Appointment" netlify hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <select name="hear"></select>
@@ -38,7 +38,7 @@
     </form>
 
     <!-- Questionaire hidden form for netlify -->
-    <form name="Questionaire" netlify netlify-honeypot="bot-field" hidden>
+    <form name="Questionaire" netlify hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <select name="hear"></select>
