--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
       <select name="month"></select>
       <select name="day"></select>
       <textarea name="comments"></textarea>
+      <div data-netlify-recaptcha="true"></div>
     </form>
 
     <!-- Questionaire hidden form for netlify -->
@@ -48,6 +49,7 @@
       <select name="fair"></select>
       <select name="employees"></select>
       <textarea name="other"></textarea>
+      <div data-netlify-recaptcha="true"></div>
     </form>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
